--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Stéphane Minotti - Photographe et Vidéaste Freelance | Capturer vos moments uniques</title>
+		<title>Stéphane Minotti - Photographe et Vidéaste Freelance | Création d’Images et Vidéos d’Exception</title>
 		<meta name="keywords" content="">
-		<meta name="description" content="Stéphane Minotti, photographe et vidéaste freelance, spécialisé dans la capture d'instants précieux et la création de visuels percutants pour particuliers et professionnels. Découvrez mes services en photographie, vidéos d'événements, et contenu promotionnel. Contactez-moi pour concrétiser vos projets visuels.">
+		<meta name="description" content="Transformez vos idées en contenus visuels d’impact avec un photographe et vidéaste professionnel spécialisé dans les entreprises, les événements, et les projets créatifs. Basé à Lyon en région Rhône-Alpes, je capture des moments uniques et crée des vidéos engageantes pour valoriser votre marque, vos produits, et vos événements. Faites le choix d’une expertise reconnue pour des photos et vidéos qui marquent.">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 		<link rel="stylesheet" href="css/templatemo-style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-		<!-- <script src="js/font-awesome.min.js"></script> -->
 		<script src="js/jquery.js"></script>
 		<script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.singlePageNav.min.js"></script>
@@ -46,7 +44,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand"><img src="images/logo.png" /></a>
+					<a href="#" class="navbar-brand"><img src="images/logo.png" alt="Logo du site"/></a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -67,14 +65,14 @@
     			<div class="row">
     				<div class="col-md-offset-2 col-md-8">
     					<h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">L'image à votre <span>service</span></h1>
-    					<h2 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s"><div class="element">
-								<div class="sub-element">STEPHANE MINOTTI</div>
-								<div class="sub-element">Photographe</div>
-								<div class="sub-element">Vidéaste</div>
-							</div>
-						</h2>
-    					
-    					<a data-scroll href="#contact" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">Contactez moi</a>
+						<div class="element wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">
+							<div class="sub-element">STEPHANE MINOTTI</div>
+							<div class="sub-element">Photographe</div>
+							<div class="sub-element">Vidéaste</div>
+						</div>
+						<div class="btn-contact">
+							<a data-scroll href="#contact" class="btn btn-default wow fadeInUp btn-contact" data-wow-offset="50" data-wow-delay="0.6s">Contactez moi</a>
+						</div>
     				</div>
     			</div>
     		</div>
@@ -88,25 +86,21 @@
 					<div class="col-12 col-md-6">
 						<div class="row">
 							<div class="col-md-12">
-								<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">A propos de moi</span></h2>
+								<h2 class="wow bounceIn" data-wow-duration="2s" data-wow-delay="5s">A propos de moi</h2>
 							</div>
-							<div class="col-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
+							<div class="col-12 wow slideInLeft" data-wow-offset="50" data-wow-delay="0.6s">
 								<p class="about-description">
 									Depuis toujours, on m’a dit qu'il était essentiel de trouver sa voie.
-									<br />
 									Pour moi, elle a pris forme à travers le sport, notamment le ski freestyle, où j'ai découvert le pouvoir de l'image en regardant des vidéos de professionnels.
-									<br />
 									Cette passion m'a guidé vers l'audiovisuel, où je capture aujourd’hui des moments précieux pour moi et pour ceux que j'accompagne. <b>Mon objectif ne se limite pas à faire de belles images</b> : je veux raconter des histoires, transmettre des émotions qui marquent. Pour moi, chaque image est une façon de redonner vie à ces souvenirs uniques et de les rendre inoubliables.
-									<br />
 									Ma démarche est avant tout humaine. Comprendre qui vous êtes, ce qui vous anime, est essentiel pour créer ensemble quelque chose de personnel et marquant.
-									<br />
 									Si vous cherchez un partenaire qui voit au-delà de l'image, je suis prêt à raconter votre histoire, à travers mon objectif.
 								</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-6 wow fadeInRight data-wow-offset="50" data-wow-delay="0.6s">
-						<img src="images/about-me.jpg" class="img-responsive about-image">
+					<div class="col-12 col-md-6 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
+						<img src="images/about-me.jpg" class="img-responsive about-image" alt="Photo du photographe">
 					</div>
 				</div>
 			</div>
@@ -123,43 +117,43 @@
 					<div class="col-12 portfolio-videos">  	
 						<div class="row">
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
-								<div class="portfolio-thumb">
-								   <video src="videos/portfolio-video1.mp4" class="img-responsive" alt="portfolio video 1" controls>
+								<div class="portfolio-thumb portfolio-thumb-left">
+								   <video src="videos/portfolio-video1.mp4" class="img-responsive" controls></video>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
-								<div class="portfolio-thumb">
-								   <video src="videos/portfolio-video2.mp4" class="img-responsive" alt="portfolio video 2" controls>
+								<div class="portfolio-thumb portfolio-thumb-right">
+								   <video src="videos/portfolio-video2.mp4" class="img-responsive" controls></video>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
-								<div class="portfolio-thumb">
-								   <video src="videos/portfolio-video3.mp4" class="img-responsive" alt="portfolio video 3" controls>
+								<div class="portfolio-thumb portfolio-thumb-left">
+								   <video src="videos/portfolio-video3.mp4" class="img-responsive" controls></video>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
-								<div class="portfolio-thumb">
-								   <video src="videos/portfolio-video4.mp4" class="img-responsive" alt="portfolio video 4" controls>
+								<div class="portfolio-thumb portfolio-thumb-right">
+								   <video src="videos/portfolio-video4.mp4" class="img-responsive" controls></video>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
-								<div class="portfolio-thumb">
-								   <video src="videos/portfolio-video5.mp4" class="img-responsive" alt="portfolio video 5" controls>
+								<div class="portfolio-thumb portfolio-thumb-left">
+								   <video src="videos/portfolio-video5.mp4" class="img-responsive" controls></video>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
-								<div class="portfolio-thumb">
-								   <video src="videos/portfolio-video6.mp4" class="img-responsive" alt="portfolio video 6" controls>
+								<div class="portfolio-thumb portfolio-thumb-right">
+								   <video src="videos/portfolio-video6.mp4" class="img-responsive" controls></video>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
-								<div class="portfolio-thumb">
-								   <video src="videos/portfolio-video7.mp4" class="img-responsive" alt="portfolio video 7" controls>
+								<div class="portfolio-thumb portfolio-thumb-left">
+								   <video src="videos/portfolio-video7.mp4" class="img-responsive" controls></video>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
-								<div class="portfolio-thumb">
-								   <video src="videos/portfolio-video8.mp4" class="img-responsive" alt="portfolio video 8" controls>
+								<div class="portfolio-thumb portfolio-thumb-right">
+								   <video src="videos/portfolio-video8.mp4" class="img-responsive" controls></video>
 								</div>
 							</div>
 						</div>
@@ -193,6 +187,7 @@
     				
 						<img src="images/portfolio-img15.jpg" class="img-responsive paysage wow bounceIn" data-wow-offset="50" data-wow-delay="0.6s" alt="portfolio image 4">
 					</div>
+				</div>
     		</div>
     	</section>
     	<!-- end portfolio -->
@@ -207,7 +202,7 @@
     				</div>
     				<div class="col-md-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
     					<svg class="service-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M220.6 121.2L271.1 96 448 96l0 96-114.8 0c-21.9-15.1-48.5-24-77.2-24s-55.2 8.9-77.2 24L64 192l0-64 128 0c9.9 0 19.7-2.3 28.6-6.8zM0 128L0 416c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L271.1 32c-9.9 0-19.7 2.3-28.6 6.8L192 64l-32 0 0-16c0-8.8-7.2-16-16-16L80 32c-8.8 0-16 7.2-16 16l0 16C28.7 64 0 92.7 0 128zM168 304a88 88 0 1 1 176 0 88 88 0 1 1 -176 0z"/></svg>
-    					<h4>Photographie</h4>
+    					<h4>Photo/Vidéo</h4>
     					<p>Immortalisez vos moments uniques : mariages, anniversaires, conférences ou soirées d'entreprise, avec des photos et vidéos de qualité professionnelle qui racontent votre histoire.</p>
     				</div>
     				<div class="col-md-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">
@@ -217,8 +212,8 @@
     				</div>
     				<div class="col-md-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
     					<svg class="service-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--! Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M384 64c0-35.3-28.7-64-64-64L64 0C28.7 0 0 28.7 0 64L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-384zM128 192a64 64 0 1 1 128 0 64 64 0 1 1 -128 0zM80 356.6c0-37.9 30.7-68.6 68.6-68.6l86.9 0c37.9 0 68.6 30.7 68.6 68.6c0 15.1-12.3 27.4-27.4 27.4l-169.1 0C92.3 384 80 371.7 80 356.6z"/></svg>
-    					<h4>Portraits & Shooting Studio</h4>
-    					<p>Réalisez des portraits professionnels, des photos de famille ou des séances créatives en studio, pour capturer des souvenirs intemporels.</p>
+    					<h4>Portraits & Shooting</h4>
+    					<p>Réalisez des portraits professionnels, des photos de famille ou des séances créatives, pour capturer des souvenirs intemporels.</p>
     				</div>
     			</div>
     		</div>
@@ -249,9 +244,10 @@
     				<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
     					<address>
     						<p class="address-title">Mon adresse</p>
-    						<p>
+    						<p><a href="tel:0601211403">
 								<svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
-								010-020-0340
+								0601211403
+								</a>
 							</p>
     						<p>
 								<svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M64 208.1L256 65.9 448 208.1l0 47.4L289.5 373c-9.7 7.2-21.4 11-33.5 11s-23.8-3.9-33.5-11L64 255.5l0-47.4zM256 0c-12.1 0-23.8 3.9-33.5 11L25.9 156.7C9.6 168.8 0 187.8 0 208.1L0 448c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-239.9c0-20.3-9.6-39.4-25.9-51.4L289.5 11C279.8 3.9 268.1 0 256 0z"/></svg>
@@ -259,23 +255,18 @@
 							</p>
     						<p>
 								<svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M16 144a144 144 0 1 1 288 0A144 144 0 1 1 16 144zM160 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96c0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zM128 480l0-162.9c10.4 1.9 21.1 2.9 32 2.9s21.6-1 32-2.9L192 480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"/></svg>
-								Ma belle rue
+								Rhone-Alpes
 							</p>
     					</address>
     					<ul class="social-icon">
     						<li><h4>Mes réseaux</h4></li>
     						<li>
-								<a href="#">
-								<svg class="social-icon-link" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
-								</a>
-							</li>
-    						<li>
-								<a href="#">
+								<a href="https://www.linkedin.com/in/stephane-minotti">
 									<svg class="social-icon-link" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg>
 								</a>
 							</li>
     						<li>
-								<a href="#">
+								<a href="https://www.instagram.com/minottis_/">
 									<svg class="social-icon-link" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
 								</a>
 							</li>
